Updating to latest Cantaloupe

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       - java
       - -Dcantaloupe.config=/cantaloupe/cantaloupe.properties
       - -jar
-      - /cantaloupe/cantaloupe-4.1.5.war
+      - /cantaloupe/cantaloupe-5.0.5.jar
     ports:
       - 8182:8182
     volumes:
