Switch to redis + bake into docker image

--- a/cantaloupe.properties
+++ b/cantaloupe.properties
@@ -470,7 +470,7 @@ cache.server.derivative.enabled = true
 
 # Available values are `FilesystemCache`, `JdbcCache`, `RedisCache`,
 # `HeapCache`, `S3Cache`, and `AzureStorageCache`.
-cache.server.derivative = FilesystemCache
+cache.server.derivative = RedisCache
 
 # Amount of time derivative cache content remains valid. Set to blank or 0
 # for forever.
@@ -597,7 +597,7 @@ AzureStorageCache.object_key_prefix =
 #----------------------------------------
 
 # !! Redis connection info.
-RedisCache.host = redis
+RedisCache.host = localhost
 RedisCache.port = 6379
 RedisCache.ssl = false
 RedisCache.password =
